src/objects/CRMC_PP__Configured_Component__c.object
<CustomObject>
    <description>Tracks information for Lightning Components and Lightning Web Components that are configured to be displayed in Grid Views</description>
    <fields>
        <fullName>CRMC_PP__Component_Type__c</fullName>
        <description>Type of component (LWC or Lightning Component)</description>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable and disable configured component.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__JSON__c</fullName>
        <description>JSON that records the data needed to create the LWC or Lightning Component</description>
        <label>JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Object_Name__c</fullName>
        <description>Object this component was configured for</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configured Component</label>
    <nameField>
        <label>Configured Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Components</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>